--- a/.github/workflows/go-tests.yaml
+++ b/.github/workflows/go-tests.yaml
@@ -19,6 +19,8 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.22"
+      - name: Create reports folder
+        run: mkdir reports
       - name: Run tests and coverage
         run: make test
       - name: Upload coverage reports
